2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,
	  support/regression/MakeList:
	  Catch bug #3598 early.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c:
	  Fix stacked hx result in shifts.
	* support/regression/MakeList:
	  Exclude some tests that need features not yet supported by s08 from s08-stack-auto testing.

2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c:
	  hc08/s08 --stack-auto struct/union parameters.

2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsymt.c,
	  src/hc08/gen.c:
	  Caller-side support for hc08/s08 struct/union return.

2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve z80 rotation.
	* src/mcs51/ralloc.c:
	  Work around a mcs51 register saving issue (codegen cannot handle a return value in a bit if other bits are live at the call).
	* src/SDCCicode.c,
	  src/SDCCopt.c:
	  Fix bug #3595.

2023-06-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/MakeList:
	  Disable trigraph test for host, since many host compilers no longer support trigraphs.

2023-06-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/ports/host/spec.mk.in:
	  Fix C99 flag handling.
	* support/regression/tests/align.c.in:
	  Fix test for current state of SDCC and host compilers wrt. C11 alignment support.

2023-06-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c:
	  Fix type of result in optimization of shifts wider than operand.
	* src/z80/gen.c:
	  Fix left-shift for wide _BitInt.
	* src/hc08/gen.c:
	  Fix shift issues.
	* src/pdk/gen.c:
	  Fix 16-bit bitwise or for register operand with global operand. Fix a in left shift by 8 code generation that overwrote a live pseudoregister p when storing the shift result onto the stack.
	* src/stm8/gen.c:
	  Fix stack balance issue in left shift code generation.
	* support/regression/tests/bitintrot.c.in: