@@ -63,8 +63,7 @@ EXCLUDE_s08 += \
 # Failure
 EXCLUDE_uc6502 += \
 	gte_20041218-1 \
-	gte_20091229-1 \
-	gte_pr94567
+	gte_20091229-1
 
 # compile issue
 EXCLUDE_uc6502 += \
@@ -78,7 +77,6 @@ EXCLUDE_ucr3ka += \
 # Failure
 EXCLUDE_s08 += \
 	gte_20091229-1 \
-	gte_pr94567 \
 	gte_20041218-1
 
 # Failure
@@ -92,27 +90,23 @@ EXCLUDE_stm8-large += \
 # Failure
 EXCLUDE_ucr2k += \
 	gte_20041218-1 \
-	gte_20091229-1 \
-	gte_pr94567
+	gte_20091229-1
 
 # Failure
 EXCLUDE_ucr2ka += \
 	gte_20041218-1 \
-	gte_20091229-1 \
-	gte_pr94567
+	gte_20091229-1
 
 # Fail
 EXCLUDE_ucgbz80 += \
 	gte_20041218-1 \
 	gte_20091229-1 \
-	gte_pr94567 \
 	gte_pr97404
 
 # Fail
 EXCLUDE_ucz180 += \
 	gte_20041218-1 \
-	gte_20091229-1 \
-	gte_pr94567
+	gte_20091229-1
 
 # abnormal stop
 EXCLUDE_ucz80 += \
@@ -127,18 +121,15 @@ EXCLUDE_ucz180-resiy += \
 # Fail
 EXCLUDE_ucz180-resiy += \
 	gte_20091229-1 \
-	gte_pr94567 \
 	gte_pr97404
 
 # Fail
 EXCLUDE_ucz80 += \
-	gte_20091229-1 \
-	gte_pr94567
+	gte_20091229-1
 
 # Fail
 EXCLUDE_ucz80-nmos += \
-	gte_20091229-1 \
-	gte_pr94567
+	gte_20091229-1
 
 # fail
 EXCLUDE_hc08 += \
@@ -147,14 +138,12 @@ EXCLUDE_hc08 += \
 # Failure
 EXCLUDE_hc08 += \
 	gte_20041218-1 \
-	gte_20091229-1 \
-	gte_pr94567
+	gte_20091229-1
 
 # Failure
 EXCLUDE_ucz80n += \
 	gte_20041218-1 \
-	gte_20091229-1 \
-	gte_pr94567
+	gte_20091229-1
 
 # Failure
 EXCLUDE_ARCH_z80 += \
@@ -162,14 +151,12 @@ EXCLUDE_ARCH_z80 += \
 
 # Failure
 EXCLUDE_ucz80-resiy += \
-	gte_20091229-1 \
-	gte_pr94567
+	gte_20091229-1
 
 # Fail
 EXCLUDE_ucz80-undoc += \
 	gte_20091229-1 \
-	gte_20041218-1 \
-	gte_pr94567
+	gte_20041218-1
 
 # Stack overflow
 EXCLUDE_pdk14 += \
@@ -181,21 +168,12 @@ EXCLUDE_pdk15-stack-auto += \
 # misc Failure
 EXCLUDE_ucrxk3a += \
 	gte_20041218-1 \
-	gte_20091229-1 \
-	gte_pr94567
-
-# Failure
-EXCLUDE_ucr3ka += \
-	gte_pr94567
+	gte_20091229-1
 
 # abnormal stop
 EXCLUDE_ez80-z80 += \
 	gte_20041218-1 \
 	gte_20091229-1
-
-# Failure
-EXCLUDE_ez80-z80 += \
-   gte_pr94567
 
 # Failure
 EXCLUDE_ARCH_mcs51 += \
@@ -206,11 +184,7 @@ EXCLUDE_ARCH_mcs51 += \
 # Failure
 EXCLUDE_tlcs90 += \
 	gte_20041218-1 \
-	gte_20091229-1 \
-	gte_pr94567 \
-	gte_20041218-1 \
-	gte_20091229-1 \
-	gte_pr94567
+	gte_20091229-1
 
 # compile issue
 EXCLUDE_uc6502 += \
